--- a/css/main_page.css
+++ b/css/main_page.css
@@ -40,6 +40,137 @@ q:before, q:after {
   content: none; }
 
 /* ╨║╨╛╨╜╨╡╤Ж ╨║╨╛╨┤╨░ ╤Б╨▒╤А╨╛╤Б╨░ ╤Б╤В╨╕╨╗╨╡╨╣ ╨▒╤А╨░╤Г╨╖╨╡╤А╨░ */
+/* Buttons
+тАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУ */
+.button,
+button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  color: #FFF;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 4px;
+  border: 1px solid #FFF;
+  cursor: pointer;
+  box-sizing: border-box; }
+
+.button:hover,
+button:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="button"]:hover,
+.button:focus,
+button:focus,
+input[type="submit"]:focus,
+input[type="reset"]:focus,
+input[type="button"]:focus {
+  color: #333;
+  border-color: #888;
+  outline: 0; }
+
+.button.button-primary,
+button.button-primary,
+input[type="submit"].button-primary,
+input[type="reset"].button-primary,
+input[type="button"].button-primary {
+  color: #FFF;
+  background-color: #33C3F0;
+  border-color: #33C3F0; }
+
+.button.button-primary:hover,
+button.button-primary:hover,
+input[type="submit"].button-primary:hover,
+input[type="reset"].button-primary:hover,
+input[type="button"].button-primary:hover,
+.button.button-primary:focus,
+button.button-primary:focus,
+input[type="submit"].button-primary:focus,
+input[type="reset"].button-primary:focus,
+input[type="button"].button-primary:focus {
+  color: #FFF;
+  background-color: #1EAEDB;
+  border-color: #1EAEDB; }
+
+/* Forms
+тАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУтАУ */
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="text"],
+input[type="tel"],
+input[type="url"],
+input[type="password"],
+textarea,
+select {
+  height: 38px;
+  padding: 6px 10px;
+  /* The 6px vertically centers text on FF, ignored by Webkit */
+  background-color: #fff;
+  border: 1px solid #D1D1D1;
+  border-radius: 4px;
+  box-shadow: none;
+  box-sizing: border-box; }
+
+/* Removes awkward default styles on some inputs for iOS */
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="text"],
+input[type="tel"],
+input[type="url"],
+input[type="password"],
+textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none; }
+
+textarea {
+  min-height: 65px;
+  padding-top: 6px;
+  padding-bottom: 6px; }
+
+input[type="email"]:focus,
+input[type="number"]:focus,
+input[type="search"]:focus,
+input[type="text"]:focus,
+input[type="tel"]:focus,
+input[type="url"]:focus,
+input[type="password"]:focus,
+textarea:focus,
+select:focus {
+  border: 1px solid #33C3F0;
+  outline: 0; }
+
+label,
+legend {
+  display: block;
+  margin-bottom: .5rem;
+  font-weight: 600; }
+
+fieldset {
+  padding: 0;
+  border-width: 0; }
+
+input[type="checkbox"],
+input[type="radio"] {
+  display: inline; }
+
+label > .label-body {
+  display: inline-block;
+  margin-left: .5rem;
+  font-weight: normal; }
+
 html {
   width: 100%;
   height: 100%;
@@ -47,7 +178,7 @@ html {
 
 #all-site-grid-wrap {
   display: grid;
-  grid-template-columns: 80px 1fr 80px;
+  grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 3rem 1fr 2fr 1fr 3rem;
   position: relative;
   width: 100%;
@@ -66,13 +197,164 @@ html {
   grid-row: 1/-1;
   z-index: 0; }
 
+.all-site-main {
+  grid-column: 2;
+  grid-row: 3;
+  display: flex;
+  font: normal 2rem "Open Sans", sans-serif;
+  color: #FFF;
+  z-index: 1; }
+  .all-site-main a {
+    text-decoration: none;
+    color: #333; }
+    .all-site-main a:hover {
+      opacity: .7; }
+
+.login .box-for-cta {
+  display: flex;
+  width: 100%; }
+  .login .box-for-cta a.cta-button {
+    display: block;
+    width: 100%;
+    height: 100%; }
+  .login .box-for-cta a.cta-button:focus,
+  .login .box-for-cta a.cta-button:active {
+    opacity: 0; }
+.login .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: grid;
+  grid-template: 1fr 3fr 1fr/minmax(10px, 1fr) minmax(360px, 600px) minmax(10px, 1fr);
+  background: rgba(0, 0, 0, 0.7) url(../images/sea_wonder.jpg) no-repeat center center/cover;
+  background-blend-mode: luminosity;
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
+  transition: opasity, transform 500ms linear; }
+.login .overlay:target {
+  transform: scale(0);
+  opacity: 0;
+  visibility: hidden; }
+.login .close-pop-up-button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 1rem;
+  font-weight: 600;
+  color: #333; }
+.login .show-forms {
+  grid-column: 2;
+  grid-row: 2;
+  display: grid;
+  grid-template: 20px 1fr 10px 2fr 30px 20px/minmax(10%, 1fr) repeat(4, minmax(20%, 2fr)) minmax(10%, 1fr);
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+  font: normal 1.5rem "Open Sans", sans-serif;
+  border-radius: 14px;
+  background: rgba(0, 0, 0, 0.1) url(../images/sea_wonder.jpg) no-repeat center center/cover;
+  background-blend-mode: multiply;
+  box-shadow: 0 0 11px 8px rgba(0, 0, 0, 0.4);
+  overflow: hidden; }
+  @media (min-width: 650px) {
+    .login .show-forms {
+      padding: 2.5rem;
+      width: 80%; } }
+.login input.sign-in,
+.login label.sign-in {
+  grid-column: 2/3;
+  grid-row: 2;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  opacity: 1; }
+.login input.sign-up,
+.login label.sign-up {
+  grid-column: 3/5;
+  grid-row: 2;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  opacity: 1; }
+.login input[name=sign-button] {
+  z-index: 10;
+  opacity: 0; }
+.login input[name=sign-button]:checked + label {
+  font-weight: bold;
+  color: #48465C; }
+.login input.sign-in:not(:checked) + label + div {
+  grid-column: 2;
+  grid-row: 4;
+  display: flex;
+  opacity: 0;
+  visibility: hidden; }
+.login input.sign-up:not(:checked) + label + div {
+  grid-column: 3;
+  grid-row: 4;
+  display: flex;
+  opacity: 0;
+  visibility: hidden; }
+.login input.sign-in:checked + label + div {
+  grid-column: 2/6;
+  grid-row: 4;
+  display: flex;
+  width: 100%;
+  opacity: 1;
+  visibility: visible; }
+.login input.sign-up:checked + label + div {
+  grid-column: 2/6;
+  grid-row: 4;
+  display: flex;
+  width: 100%;
+  opacity: 1;
+  visibility: visible; }
+.login form,
+.login fieldset {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%; }
+  .login form *,
+  .login fieldset * {
+    margin-bottom: 1rem; }
+  .login form .small-buttons,
+  .login fieldset .small-buttons {
+    display: inline-flex;
+    justify-content: space-around; }
+  .login form input[type="text"],
+  .login form input[type="password"],
+  .login fieldset input[type="text"],
+  .login fieldset input[type="password"] {
+    margin-left: 1rem; }
+.login form:before {
+  content: "";
+  width: 90%;
+  height: 140%;
+  display: block;
+  position: absolute;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.9);
+  border-top: 1px solid rgba(255, 255, 255, 0.9); }
+.login legend {
+  font: bold 3rem "Philosopher", sans-serif;
+  text-align: center; }
+.login footer {
+  grid-row: 5;
+  grid-column: 1/-1;
+  text-align: center;
+  padding-top: 5px; }
+
 .ugly-fish {
   grid-column: 1/-1;
   grid-row: 1/-1;
   position: relative;
   width: 100%;
   height: 100%;
-  z-index: 10; }
+  z-index: 0; }
   .ugly-fish img {
     width: 30%;
     position: absolute;
@@ -80,6 +362,7 @@ html {
     bottom: 0;
     backface-visibility: visible;
     transform: rotateY(180deg);
+    opacity: .7;
     animation: swimmingfish 20s linear infinite, up-down 5s linear infinite; }
     @media (min-width: 900px) {
       .ugly-fish img {
